Update to state that some input files need to be untarred/unzipped

--- a/scripts/virulenceAMRplasmids.ipynb
+++ b/scripts/virulenceAMRplasmids.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,20 +27,21 @@
     "from Bio import SeqIO\n",
     "import pickle as pkl\n",
     "\n",
+    "## If the script is taken from GitHub, some to the file in the inputDir will need to be unzipped/untarred\n",
     "inputDir=\"/mnt/storage5/anton/KpReplicons/inputData/\"\n",
     "outputDir=\"/mnt/storage5/anton/KpReplicons/outputData/\"\n",
-    "plasmidHits=\"/mnt/storage5/anton/KpReplicons/PlasmidFinderHits/\"\n"
+    "plasmidHits=\"/mnt/storage5/anton/KpReplicons/inputData/PlasmidFinderHits/\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load metadata on contigs: length, carbapenemase, sideriphores, assembly, plasmid replicons\n",
     "\n",
-    "with open(\"/mnt/storage5/anton/KpReplicons/ContigData.pkl\", 'rb') as pkl_file:\n",
+    "with open(f'{inputDir}/ContigData.pkl', 'rb') as pkl_file:\n",
     "    contigsData = pkl.load(pkl_file)\n",
     "\n",
     "files = [f for f in listdir(plasmidHits) if isfile(join(plasmidHits, f))  and (splitext(f)[-1]==\".fasta\" or splitext(f)[-1]==\".fna\") and f[0:3]==\"GCF\"  ]\n",
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
