Added to PlasmidAnalysisV3 a more detailed explanation of possible bug in PlasmidFinder

--- a/scripts/PlasmidAnalysisV3.ipynb
+++ b/scripts/PlasmidAnalysisV3.ipynb
@@ -215,18 +215,18 @@
    "source": [
     "# Load list of plasmid sequence hashes and their nucleotide sequences\n",
     "# There is a likely bug in PlasmidFinder. \n",
-    "# PlasmidFinder uses Blast to identify replicon sequences in the fasta files.\n",
+    "# PlasmidFinder uses BLAST to identify replicon sequences in the fasta files.\n",
     "# One of the BLAST outputs is the sequence in fasta file which matches the database replicon sequence\n",
-    "# PlasmidFinder also has an option (-x) to return the these matched sequences\n",
+    "# PlasmidFinder has an option (-x) to return these matched sequences\n",
     "# Examination of plasmidFinder scripts showed it uses md5 hashing algorithm \n",
     "# I have attempted to identify the correpondence between replicons sequences and replicon hashes returned by PlasmidFinder\n",
     "# By using same algorithm to hash all returned replicon sequences, I wanted to match sequence to hash\n",
     "# This has partially worked - only some sequences returned a hash that matched one of the hashes returned by PlasmidFinder\n",
     "# Further examination of PlasmidFinder script identified that the sequence on which hash is calculated is truncated version of sequence returned by BLAST\n",
-    "# I have generated generated truncated versions of the sequences returned by PlasmidFinder by removing one nucleotide at a time from start and end of sequence\n",
+    "# I have generated truncated versions of the sequences returned by PlasmidFinder by removing one nucleotide at a time from start and end of sequence\n",
     "# Many of the the hashes generated from these truncated sequence matched the hashes returned by PlasmidFinder\n",
     "# These matches are not accidental due to nature of hashing algorithm\n",
-    "# The truncation method above worked well, but it still left some hashes for which nucletide sequence could not be identified.\n",
+    "# The truncation method above worked well, but it still left some hashes for which nucleotide sequence could not be identified.\n",
     "# The list of valid hashes is in plasmidSequencesAndHashes.txt\n",
     "# The hashes with missing nucleotide sequences can be identified from repliconFrequencies.tsv based on which hashes (Col 1) have blank sequence (last Col)\n",
     "\n",
